--- a/swagger/WafApplicationSignatureProvider.json
+++ b/swagger/WafApplicationSignatureProvider.json
@@ -784,7 +784,7 @@
                     "type": "string"
                 },
                 "tags": {
-                    "description": "Tags for WAF rule as per Modsec language. They are extracted from the tag actions in a Modsec rule. This field is generated from the rule itself and cannot be set by the user. Field introduced in 18.1.3. Maximum of 64 items allowed.",
+                    "description": "Tags for WAF rule as per Modsec language. They are extracted from the tag action in a ModSec rule. Field introduced in 18.1.3.",
                     "type": "array",
                     "items": {
                         "type": "string"
