--- a/swagger/WafPolicyPSMGroup.yaml
+++ b/swagger/WafPolicyPSMGroup.yaml
@@ -464,7 +464,7 @@ definitions:
                 items:
                     $ref: '#/definitions/KeyValue'
             locations:
-                description: "Positive Security Model locations. These are used to partition the application name space. Field introduced in 18.2.3. Maximum of 16384 items allowed."
+                description: "Positive Security Model locations. These are used to partition the application name space. Field introduced in 18.2.3."
                 type: array
                 items:
                     $ref: '#/definitions/WafPSMLocation'
@@ -525,7 +525,7 @@ definitions:
                 description: "User defined name for this location, it must be unique in the group. Field introduced in 18.2.3."
                 type: string
             rules:
-                description: "A list of rules which should be applied on this location. Field introduced in 18.2.3. Maximum of 1024 items allowed."
+                description: "A list of rules which should be applied on this location. Field introduced in 18.2.3."
                 type: array
                 items:
                     $ref: '#/definitions/WafPSMRule'
@@ -591,7 +591,7 @@ definitions:
                 type: string
                 default: "INSENSITIVE"
             match_elements:
-                description: "The match elements, for example ARGS id or ARGS|!ARGS password. Field introduced in 18.2.3. Maximum of 64 items allowed."
+                description: "The match elements, for example ARGS id or ARGS|!ARGS password. Field introduced in 18.2.3."
                 type: array
                 items:
                     $ref: '#/definitions/WafPSMMatchElement'
