--- a/swagger/BotMapping.yaml
+++ b/swagger/BotMapping.yaml
@@ -440,11 +440,9 @@ definitions:
             component_matcher:
                 description: "The component for which this mapping is used. Enum options - BOT_DECIDER_CONSOLIDATION, BOT_DECIDER_USER_AGENT, BOT_DECIDER_IP_REPUTATION, BOT_DECIDER_IP_NETWORK_LOCATION. Field introduced in 21.1.1."
                 type: string
-            conditions:
+            condition:
                 description: "The conditions to match, combined by logical AND. Field introduced in 21.1.3."
-                type: array
-                items:
-                    $ref: '#/definitions/MatchTarget'
+                $ref: '#/definitions/MatchTarget'
             identifier_matcher:
                 description: "The list of bot identifier names and how they're matched. Field introduced in 21.1.1."
                 $ref: '#/definitions/StringMatch'
