--- a/swagger/SystemConfiguration.json
+++ b/swagger/SystemConfiguration.json
@@ -988,7 +988,7 @@
                     "$ref": "#/definitions/ConfigPbAttributes"
                 },
                 "default_license_tier": {
-                    "description": "Specifies the default license tier which would be used by new Clouds. Enum options - ENTERPRISE_16, ENTERPRISE, ENTERPRISE_18, BASIC, ESSENTIALS. Field introduced in 17.2.5. Allowed in Basic edition, Essentials edition, Enterprise edition. Special default for Basic edition is BASIC, Essentials edition is ESSENTIALS, Enterprise is ENTERPRISE.",
+                    "description": "Specifies the default license tier which would be used by new Clouds. Enum options - ENTERPRISE_16, ENTERPRISE, ENTERPRISE_18, BASIC, ESSENTIALS, SAAS. Field introduced in 17.2.5. Allowed in Basic edition, Essentials edition, Enterprise edition. Special default for Basic edition is BASIC, Essentials edition is ESSENTIALS, Enterprise is ENTERPRISE.",
                     "type": "string",
                     "default": "ENTERPRISE"
                 },
